# lemurcalls

./: .gitignore  README.md  actionformer_dataset.py  actionformermodel.py  actionformertrain.py  actionformertrain_without_cp.py  af_without_cp_newscheduler.py  call_length.py  class_filter.py  confusion.py  datautils.py  datautils_1.py  datautils_ben.py  evaluate.py  evaluate_metrics.py  experiments.ipynb  filter_by_stn.py  filter_cluster_cl.py  filter_labels_by_snr.py  infer.py  infer_final.py  lose_clicks_dirwise.py  losses.py  merge_json.py  model.py  model_linear.py  old_infer.py  old_infer_folder.py  old_infer_folder_new.py  prec_rec.py  prec_rec_ben.py  prec_rec_q123.py  presentation.ipynb  pyproject.toml  scatterplot.py  scatterplot_ampl_snr_score.py  testt.py  train.py  train_figure.py  train_figure_base.py  (+40 more)
WHISPERSEG/: infer_folder.py  model.py  train.py
final_checkpoint_ct2/: vocabulary.json
lemurcalls/: .gitignore  README.md  __init__.py  audio_utils.py  clusters.pt  datautils.py  download_whipser.py  evaluate_metrics.py  presentation.ipynb  train_figure_base.py  utils.py  visualize_predictions.py  whisperformer_infer.py  whisperformer_model.py
presentation_notebook/: presentation.ipynb
tests/: test_dataset.py  test_datautils.py  test_inference.py  test_json_to_raven.py  test_losses.py  test_model.py
util/: anno_stats.py  balance_cuts.py  confusion_framewise.py  fast_heatmap.py  log_stat_parse.py  log_stat_parse_simple.py  pick_random_wavs.py  process_post_annotated.py  process_pre_annotated.py  split_wavs.py  summarise_eval_res.py  trim_wavs.py
(+71 files in other folders)
