[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lemurcalls"
version = "0.1.0"
description = "WhisperSeg & WhisperFormer for lemur call segmentation"
requires-python = ">=3.9"
dependencies = [
    # Core ML
    "torch>=2.2",
    "transformers>=4.40",
    "ctranslate2>=4.0",
    # Audio
    "librosa>=0.11",
    "scipy>=1.11",
    "soundfile>=0.13",
    # Data / ML
    "numpy>=1.26,<2.0",
    "scikit-learn>=1.5",
    "pandas>=2.0",
    # Visualization
    "matplotlib>=3.8",
    "ipywidgets>=8.0",
    "seaborn>=0.13",
    # Utilities
    "tqdm>=4.60",
    "pillow>=10.0",
    "huggingface_hub>=0.20",
    "wandb>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["lemurcalls*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
